<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/regno_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_no_hint"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fname_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname_hint" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lname_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname_hint"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/avatar_iv"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/avatar_desc"
            android:src="@drawable/ic_launcher_background" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pwd_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/upload_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/upload"/>


    </LinearLayout>

</ScrollView>